<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.icuxika</groupId>
    <artifactId>JavaFX-Package-Sample</artifactId>
    <version>1.0.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>22</maven.compiler.release>
        <javafx.version>23</javafx.version>
        <mainClass>com.icuxika.Launcher</mainClass>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.palexdev</groupId>
            <artifactId>materialfx</artifactId>
            <version>11.17.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.12</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.3</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>win</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <application.package.type>msi</application.package.type>
                <application.icon>${project.basedir}/src/main/resources/application.ico</application.icon>
                <application.package.stdout.encoding>-J-Dsun.stdout.encoding=UTF-8</application.package.stdout.encoding>
                <application.package.stderr.encoding>-J-Dsun.stderr.encoding=UTF-8</application.package.stderr.encoding>
                <application.package.options/>
                <application.package.options1>--win-dir-chooser</application.package.options1>
                <application.package.options2>--win-menu</application.package.options2>
                <application.package.options3>--win-menu-group</application.package.options3>
                <application.package.options4>JavaFXSample</application.package.options4>
                <application.package.options5>--win-per-user-install</application.package.options5>
                <application.package.options6>--win-shortcut</application.package.options6>
                <application.package.options7>--win-shortcut-prompt</application.package.options7>
                <application.package.options8>--win-upgrade-uuid</application.package.options8>
                <application.package.options9>fd5b16cf-e0a9-4ef4-abc8-73d396fecf6d</application.package.options9>
            </properties>
        </profile>
        <profile>
            <id>mac</id>
            <properties>
                <application.package.type>dmg</application.package.type>
                <application.icon>${project.basedir}/src/main/resources/application.icns</application.icon>
                <application.package.stdout.encoding>-J-Dsun.stdout.encoding=UTF-8</application.package.stdout.encoding>
                <application.package.stderr.encoding>-J-Dsun.stderr.encoding=UTF-8</application.package.stderr.encoding>
                <application.package.options/>
            </properties>
        </profile>
        <profile>
            <id>jni</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.10.1</version>
                        <configuration>
                            <release>${maven.compiler.release}</release>
                            <compilerArgs>
                                <arg>-h</arg>
                                <arg>${project.basedir}/src/native/include</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <configuration>
                    <transformers>
                        <transformer
                                implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                        <transformer
                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>${mainClass}</mainClass>
                        </transformer>
                    </transformers>
                    <outputDirectory>${project.build.directory}/jars</outputDirectory>
                    <finalName>${project.artifactId}-${project.version}-shade</finalName>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>module-info.class</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>image</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jpackage</executable>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <arguments>
                                <argument>${application.package.stdout.encoding}</argument>
                                <argument>${application.package.stderr.encoding}</argument>
                                <argument>-n</argument>
                                <argument>JavaFXSample</argument>
                                <argument>-t</argument>
                                <argument>app-image</argument>
                                <argument>-i</argument>
                                <argument>
                                    ${project.build.directory}/jars
                                </argument>
                                <argument>--main-class</argument>
                                <argument>${mainClass}</argument>
                                <argument>--main-jar</argument>
                                <argument>${project.artifactId}-${project.version}-shade.jar</argument>
                                <argument>--dest</argument>
                                <argument>${project.build.directory}/buildImage</argument>
                                <argument>--icon</argument>
                                <argument>${application.icon}</argument>
                                <argument>--app-version</argument>
                                <argument>1.0.0</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <stripDebug>true</stripDebug>
                    <compress>2</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <launcher>JavaFXSample</launcher>
                    <jlinkImageName>build-link</jlinkImageName>
                    <jlinkZipName>sample-zip</jlinkZipName>
                    <mainClass>sample/com.icuxika.MainApp</mainClass>
                    <options>
                        <option>--enable-native-access=sample</option>
                        <option>-Dsun.stdout.encoding=UTF-8</option>
                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>